@@ -9,7 +9,7 @@ import java.util.List;
 public class CreateTeamCommand implements Command {
 
     public static final int EXPECTED_NUMBER_OF_ARGUMENTS = 1;
-    private static final String CREATE_TEAM_SUCCESS_MESSAGE = "Team %s created successfully";
+    private static final String CREATE_TEAM_SUCCESS_MESSAGE = "Team %s created successfully.";
 
     private final TaskManagementRepository taskManagementRepository;
 
@@ -21,7 +21,7 @@ public class CreateTeamCommand implements Command {
     public String execute(List<String> parameters) {
         ValidationHelpers.validateArgumentsCount(parameters, EXPECTED_NUMBER_OF_ARGUMENTS);
 
-        String teamName = parameters.getFirst();
+        String teamName = parameters.get(0);
         taskManagementRepository.createTeam(teamName);
 
         return String.format(CREATE_TEAM_SUCCESS_MESSAGE, teamName);
